# a2a-cli-registry

./: .codex-pass4-prompt.md  .codex-pass4.out  .codex-pass5-prompt.md  .codex-pass5.out  .gitignore  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOVER-a2a-cli-registry-2026-06-21-1830.md  NOTICE  README.md  SECURITY.md  backfill_proposals.jsonl  pyproject.toml  registry.db.bak-40866b1  sanity_report.jsonl
.github/ISSUE_TEMPLATE/: bug_report.md  prior_art_check.md
bridge/: audit_to_registry.py  enrich_feed.py  llm_infer.py  standalone.py  test_audit_to_registry.py  test_capture_help.py  test_enrich_feed.py  test_standalone.py
core/: __init__.py  health.py  models.py  ops_registry.py  populate.py  vocabulary.py
core/adapters/: base.py  python_adapter.py  stub_adapter.py
core/announcer/: announcer.py
core/capability/: infer.py  infer_eval.py  model.py
core/cardgen/: card.py
core/catalog/: match.py  queries.py
core/cli/: main.py
core/discovery/: base.py  cli_audit_source.py
core/graph/: edges.py
core/mcp/: http.py  server.py
demo/: config.toml  proposals.json
scripts/: reeval_not_standalone.py
tests/: conftest.py  test_adapters.py  test_announcer.py  test_backfill_capabilities.py  test_backfill_seed_anthropic_index.py  test_capability_extractor.py  test_capability_llm_fallback.py  test_capability_model.py  test_capability_repair.py  test_catalog.py  test_cli.py  test_cli_audit_source.py  test_concurrency.py  test_description_regenerator.py  test_discovery_base.py  test_e2e.py  test_fixed_by_migration.py  test_graph.py  test_health.py  test_infer.py  test_match.py  test_mcp.py  test_mcp_http.py  test_models.py  test_notifier.py  test_okf.py  test_ops_registry.py  test_packaging.py  test_plan_health.py  test_planner.py  test_populate.py  test_portmanager.py  test_prober.py  test_remediation_classify.py  test_remediation_cli.py  test_remediation_envelope.py  test_remediation_hermes.py  test_remediation_paperclip.py  test_remediation_safefixer.py  test_remediation_safefixer_e2e.py  (+8 more)
tools/: backfill_capabilities.py  capability_extractor.py  capability_llm_fallback.py  capability_repair.py  description_regenerator.py  reclassify_envgated.py  reclassify_modulemode.py  reclassify_modulemode_v2.py  sanity_check.py
(+124 files in other folders)
