[project]
name = "a2a-cli-registry"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "sqlmodel>=0.0.21,<0.1",
  "uvicorn>=0.30,<1.0",
  "httpx>=0.27,<1.0",
  "portalocker>=2.10,<3.0",
  "mcp==1.28.0",         # PIN EXACT — has Streamable HTTP (1.2.0 did not); §6.2
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "jsonschema>=4.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
