[project]
name = "a2a-cli-registry"
version = "1.1.0"
description = "Capability-typed registry for your local CLI fleet — discover, health-check, and get suggested tool-chains over MCP and A2A."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Jonas Cords", email = "jonas.cords@gmail.com" }]
keywords = ["mcp", "a2a", "cli", "registry", "agent", "tool-chaining"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "fastapi>=0.111,<1.0",
  "sqlmodel>=0.0.21,<0.1",
  "uvicorn>=0.30,<1.0",
  "httpx>=0.27,<1.0",
  "portalocker>=2.10,<3.0",
  "mcp==1.28.0",         # PIN EXACT — has Streamable HTTP (1.2.0 did not); §6.2
  "rich>=13,<15",
  "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/cordsjon/a2a-cli-registry"
Repository = "https://github.com/cordsjon/a2a-cli-registry"

[project.scripts]
a2a-cli-registry = "core.cli.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "jsonschema>=4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: cross-process tests that spawn subprocesses (deselect with -m 'not slow')",
]
